# xcube-resampling

./: 404.html  =2024.07  =2024.7  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: integration-tests.yml  publish-pypi.yml  test-and-coverage.yaml  unit-tests.yml
about/: index.html
api/: index.html
docs/: about.md  api.md  guide.md  index.md  start.md
docs/advanced/: sentinel3.md
docs/examples/: rectify_sentinel3.ipynb  resample_in_space_large_example_reproject_dataset.ipynb
examples/: affine.ipynb  analysis_profil.py  coords.ipynb  debug.py  rectify_sentinel3.ipynb  resample_in_space.ipynb  resample_in_space_large_example_reproject_dataset.ipynb
examples/affine/: index.html
examples/coords/: index.html
examples/rectify_sentinel3/: index.html
examples/resample_in_space_large_example_reproject_dataset/: index.html
guide/: index.html
notebooks/: xcube_resampling_rectify_1.0.ipynb  xcube_resampling_reproject_1.0.ipynb
search/: search_index.json
start/: index.html
tests/: __init__.py  conftest.py  integration_test_rectifier.py  sampledata.py  test_affine.py  test_coarsen.py  test_dask.py  test_interpolator.py  test_rectifier.py  test_rectifier2.py  test_rectify.py  test_reproject.py  test_reprojector.py  test_spatial.py  test_utils.py  test_version.py
tests/gridmapping/: __init__.py  test_assertions.py  test_base.py  test_bboxes.py  test_cfconv.py  test_coords.py  test_dataset.py  test_helpers.py  test_regular.py  test_transform.py
xcube_resampling/: __init__.py  affine.py  coarsen.py  constants.py  dask.py  grid.py  gridmapping.py  interpolator.py  rectifier.py  rectifier2.py  rectify.py  reproject.py  reprojector.py  spatial.py  utils.py  version.py
xcube_resampling/gridmapping/: __init__.py  assertions.py  base.py  bboxes.py  cfconv.py  coords.py  dataset.py  helpers.py  regular.py  transform.py  undefined.py
