[build-system]
requires = ["setuptools >= 61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xarray-eopf"
dynamic = ["version", "readme"]
authors = [
  {name = "Konstantin Ntokas (Brockmann Consult GmbH)"},
  {name = "Norman Fomferra (Brockmann Consult GmbH)"}
]
description = "A backend implmentation for xarray that allows for analysis-ready reading of ESA EOPF data products."
keywords = [
  "copernicus",
  "esa",
  "eopf",
  "sentinel",
  "xarray",
  "zarr"
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

requires-python = ">=3.10"

dependencies = [
  "aiohttp",
  "dask",
  "dask-image",
  "fsspec",
  "numba",
  "numpy",
  "pyproj",
  "requests",
  "s3fs",
  "xarray>=2024.10",
  "zarr>=2,<3.0"
]

[project.optional-dependencies]
dev = [
  # Build tools
  "build",
  "hatch",
  "twine",
  # Code Style / QA
  "black",
  "isort",
  "ruff",
  # Testing
  "pytest",
  "pytest-cov",
  # Notebooks / Visualisation
  "jupyterlab",
  "matplotlib",
]
doc = [
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python"
]

[project.entry-points."xarray.backends"]
eopf-zarr = "xarray_eopf.backend:EopfBackend"

[tool.setuptools.dynamic]
version = {attr = "xarray_eopf.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
  "tests",
  "docs"
]

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
# There is a problem with ruff when linting imports
exclude = ["**/*.ipynb"]

[project.urls]
Documentation = "https://eopf-sample-service.github.io/xarray-eopf"
Repository = "https://github.com/EOPF-Sample-Service/xarray-eopf"
Changelog = "https://github.com/EOPF-Sample-Service/xarray-eopf/blob/main/CHANGES.md"
Issues = "https://github.com/EOPF-Sample-Service/xarray-eopf/issues"
