[metadata]
name = xcube_resampling
version = attr: xcube_resampling.__version__
description = A Python package providing low-level, dask-aware spatial resampling algorithms for xcube and everyone.
long_description = file: README.md, CHANGES.md, LICENSE
keywords = earth observation, ard, data cubes, dask
license = MIT
author = xcube Development Team

[options]
packages = find:
